--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                         <img src="ressources/rainbowdash.png">
                         <figcaption>Little Pony Rainbow Dash</figcaption>
                     </figure>
+                    <figure>
+                        <img src="img/fluttershy.png">
+                        <figcaption>Fluttershy</figcaption>
+                    </figure>
                 </li>
             </ul>
             <div class="clearfix"></div>
