--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <header>Header requested</header>
-            <h1>Who is your favorite My Little Pony ?</h1>
+            <h1>Who is your favorite "My Little Pony" ?</h1>
             <ul class="ponys">
                 <li>
                     <figure>
